--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
+                <h2>Button Example</h2>
                 <button>About Website</button>
             </div>
             <div class="col">
-            
+                <h2>Alert Example</h2>
+                <div class="alert alert-success" role="alert">
+                    Your website has loaded!
+                </div>
             </div>
             <div class="col">
-            
+                <h2>Badge Example</h2>
+                <h4>Website Badge <span class="badge badge-secondary">New</span></h4>
             </div>
         </div>
     </div>
