Created the bulma third party library and transliteration of previous code

--- a/UIkit.html
+++ b/UIkit.html
@@ -20,8 +20,10 @@
                 </div>
             </div>
             <div class="col">
-                <h2>Badge Example</h2>
-                <h4>Website Badge <span class="badge badge-secondary">New</span></h4>
+                <h2>Badge/Notification Example</h2>
+                <button type="button" class="btn btn-primary">
+                    Notifications <span class="badge bg-light text-dark">61</span>
+                </button>
             </div>
         </div>
     </div>
