--- a/UIkit.html
+++ b/UIkit.html
@@ -4,29 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.24.2/dist/css/uikit.min.css" />
 </head>
 <body>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <h2>Button Example</h2>
-                <button>About Website</button>
-            </div>
-            <div class="col">
-                <h2>Alert Example</h2>
-                <div class="alert alert-success" role="alert">
-                    Your website has loaded!
-                </div>
-            </div>
-            <div class="col">
-                <h2>Badge/Notification Example</h2>
-                <button type="button" class="btn btn-primary">
-                    Notifications <span class="badge bg-light text-dark">61</span>
-                </button>
+    <div class="uk-container uk-text-center">
+        <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
+            <div>
+                <h2 class="uk-heading-secondary">Button Example</h2>
+                <button class="uk-button uk-button-primary">About Website</button> 
             </div>
         </div>
+        <div uk-alert>
+            <a href class="uk-alert-success">This is a success alert.</a>
+        </div>
+        <div class="uk-card uk-card-body"></div>
+            <h3 class="uk-card uk-card-default">This is a card.</h3>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.24.2/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.24.2/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
